# Mangrove

./: LICENSE
XLib-v1.2.0/: CMakeLists.txt  README.md  doxygen.cfg
XLib-v1.2.0/CMakeBase/: CMakeLists.txt
XLib-v1.2.0/Doc/html/: BaseHost_8hpp_source.html  Base_8hpp_source.html  GraphBase_8hpp_source.html  GraphDegree_8hpp_source.html  GraphHost_8hpp_source.html  GraphNamespace_8hpp_source.html  GraphSTDC_8hpp_source.html  GraphSTD_8hpp_source.html  GraphWeight_8hpp_source.html  Graph_8hpp_source.html  Numeric_8hpp_source.html  Numeric_8i_8hpp_source.html  Parsing_8hpp_source.html  Timer_8hpp_source.html  Timer_8i_8hpp_source.html  XLibHost_8hpp_source.html  XLib_8hpp_source.html  annotated.html  classPowermon.html  classcuda__graph_1_1cudaGraph.html  classcuda__graph_1_1cudaGraphWeight.html  classcuda__util_1_1deviceProperty.html  classes.html  classfUtil_1_1Progress.html  classfUtil_1_1UniqueMap.html  classfast__queue_1_1Queue.html  classgraph_1_1GraphBase.html  classgraph_1_1GraphDegree.html  classgraph_1_1GraphSTD.html  classgraph_1_1GraphSTDC.html  classgraph_1_1GraphWeight.html  classtimer_1_1Timer.html  classtimer__cuda_1_1Timer.html  dir_0068cd59237a1f9106b26cab225ef7e9.html  dir_038d5cbcb9b7a8489339551de388465a.html  dir_049837c39a5f4913f8fc8150d4e8159c.html  dir_0748d1e293cd4de5c480013a4757b4ec.html  dir_093d8e2ff3f8a4dcd72a14acc0bbddbe.html  dir_18d6a2ba3cf878a116a88a247d2f1d37.html  dir_1d7b8720fb76b7d26763583364028c3e.html  (+112 more)
XLib-v1.2.0/Doc/html/search/: all_61.js  all_62.js  all_63.js  all_66.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_70.js  all_71.js  all_73.js  all_74.js  all_77.js  classes_62.js  classes_63.js  classes_64.js  classes_66.js  classes_67.js  classes_69.js  classes_6c.js  classes_70.js  classes_72.js  classes_74.js  classes_75.js  classes_77.js  enums_63.js  enumvalues_66.js  functions_5f.js  functions_67.js  functions_69.js  functions_6c.js  functions_70.js  functions_73.js  functions_74.js  functions_77.js  namespaces_64.js  namespaces_73.js  search.js
XLib-v1.2.0/OLD/: DataMovementDynamic.cuh  DataMovementDynamic.i.cuh  DataMovementQueue.cuh
XLib-v1.2.0/Script/: Valgrind.sh  cuda.supp  useful_tools.txt
XLib-v1.2.0/include/: XLib.hpp
XLib-v1.2.0/include/Base/: Base.hpp  host_device.cuh
XLib-v1.2.0/include/Base/Device/: BaseDevice.cuh
XLib-v1.2.0/include/Base/Host/: Timer.hpp  bitmask.hpp  fUtil.hpp  fast_queue.hpp  (+5 more)
XLib-v1.2.0/include/Graph/: Graph.hpp
XLib-v1.2.0/include/PowerMon/: powermon.hpp
XLib-v1.2.0/src/PowerMon/: powermon.cpp
XLib-v1.2.0/test/DataMovement/: CMakeLists.txt  CacheModifiersTest.cu  DataTransfer.cu
XLib-v1.2.0/test/OptimizedFill/: CMakeLists.txt  OptimizedFill.cu  compile.sh
XLib-v1.2.0/test/PTX/: PTXtest.cu
XLib-v1.2.0/test/Primitives/: ThreadReduceTest.cu  ThreadScanTest.cu
mangrove_master/: .gitignore  CMakeLists.txt  Mangrove.cu  README.md  Syntax.txt
mangrove_master/OLD/: Dictionary.cpp  Dictionary.hpp  GPUMiningCustom.cuh  TemplateConfOLD.cuh  TemplateConfUser.cuh  TemplateEngine.cuh  UserFunctions.cuh  disassembler.sh  excludeList.txt  launch_numeric.sh
mangrove_master/OLD/ToDO/: GPUMiningCustom.i.cuh  GPUMiningSupport.cuh  GPUMiningSupport.i.cuh  HostMiningCustom.hpp  HostMiningCustom.i.hpp
mangrove_master/Script/: LineCounting.sh
mangrove_master/TemplateConf/: TemplateConf.cuh  UserFunctions.cuh
mangrove_master/include/: Utility.hpp  config.cuh  mangrove.hpp
mangrove_master/include/DataTypes/: ModuleSTR.hpp  TraceProp.cuh  TraceProp.i.cuh
mangrove_master/include/GetTrace/: GenerateTrace.cuh  GetTraceSupport.hpp  ReadTrace.cuh
mangrove_master/include/GetTrace/Kernels/: GPUBooleanParsing.cuh  GPUNumericParsing.cuh
mangrove_master/include/GetTrace/impl/: GenerateTrace.i.cuh  GetTraceSupport.i.hpp  ReadTrace.i.cuh
mangrove_master/include/Inference/: CheckBinaryMonotony.hpp  CheckTernaryMonotony.hpp  Generator.hpp  RecursiveMatchRanges.cuh  RecursiveMatchRangesTernary.cuh  ResultCollector.hpp  TernaryInvariantChecker.cuh
mangrove_master/include/Inference/impl/: Generator.i.hpp  ResultCollector.i.hpp
mangrove_master/include/Mining/: Mining.hpp  TemplateEngine.cuh  TemplateEngineSupport.cuh
mangrove_master/include/Mining/Device/: GPUMiningFixed.cuh
mangrove_master/include/Mining/Device/Kernels/: BooleanCounting.cuh  GPUGenericMining.cuh  NumericRange.cuh
mangrove_master/include/Mining/Device/impl/: AutoTuning.cuh  GPUHelper.cuh
mangrove_master/include/Mining/Host/: HostMiningFixed.hpp  HostMiningGeneric.hpp  HostMiningGeneric.i.hpp
mangrove_master/include/Printer/: InvariantPrinter.hpp  InvariantPrinter.i.hpp
mangrove_master/regression/: CMakeLists.txt
mangrove_master/regression/apb/: apb_bool.vcd  apb_numeric.vcd
mangrove_master/regression/bool/: bool_bool.vcd
mangrove_master/regression/fpadd/: fpadd_bool.vcd
mangrove_master/regression/fpmul/: fpmul_bool.vcd
mangrove_master/regression/jpeg_dct/: jpeg_dct_bool.vcd
mangrove_master/regression/jpeg_enc/: jpeg_enc_bool.vcd
mangrove_master/regression/jpeg_qnr/: jpeg_qnr_bool.vcd  jpeg_qnr_numeric.vcd
mangrove_master/regression/jpeg_rle/: jpeg_rle_bool.vcd  jpeg_rle_numeric.vcd
mangrove_master/regression/jpeg_zig/: jpeg_zig_bool.vcd
mangrove_master/regression/uart/: uart_bool.vcd  uart_numeric.vcd
mangrove_master/src/: Utility.cpp
mangrove_master/src/DataTypes/: ModuleSTR.cpp  TraceProp.cu
mangrove_master/src/GetTrace/: GenerateTrace.cu  GetTraceSupport.cpp  ReadTrace.cu
mangrove_master/src/Inference/: CheckBinaryMonotony.cpp  GeneratorBool.cpp  GeneratorNumeric.cpp  ResultCollectorBool.cpp  ResultCollectorNumeric.cpp
mangrove_master/src/Mining/Device/: AutoTuning.cu  GPUMiningFixedBool.cu  GPUMiningFixedNumeric.cu
mangrove_master/src/Mining/Host/: HostMiningFixedBool.cu  HostMiningFixedNumeric.cu
mangrove_master/src/Printer/: InvariantPrinterBool.cpp  InvariantPrinterNumeric.cpp
mangrove_master/vcd2mangrove/: CMakeLists.txt
mangrove_master/vcd2mangrove/include/: Vcd2mangrove.hh
mangrove_master/vcd2mangrove/src/: Vcd2mangrove.cc  example.vcd  vcd2mangrove_main.cc
(+79 files in other folders)
